# evolutionary-agents

./: README.md  pyproject.toml  run_experiment.py
results/bugfix_test/: config.json  results.json
results/graph_test/: config.json  priors_by_generation.json  results.json
results/real_test_1/: config.json  results.json
results/test/: config.json  priors_by_generation.json  results.json
src/: agent.py  analysis.py  config.py  graph_world.py  grid_world.py  reproduction.py  signals.py  simulator.py
